--- a/master.css
+++ b/master.css
@@ -1,12 +1,37 @@
 @charset "UTF-8";
 
-
 /* Default styling for this specific page. */
-body {background-color: Silver; 
-	width: 980px;	 /* iPad width */
+body {background-color: white; 					
+	width: 900px;	
 	margin: 0 auto;  /* top and bottom 0, right and left auto */
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12pt;}
+
+@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : landscape) {
+    body {
+        background-color: silver;
+	width: 600px;	
+    }
+}
+
+
+@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : portrait) {
+    body {
+        background-color: silver;
+	width: 300px;	
+    }
+}
+
+
+/*
+@media screen and (max-width:768px) { 
+    body {
+        background-color: red;
+        width: 700px;
+    }
+}
+*/
+
 		
 /* Default styling for anything within the wrap division. */   
 #wrap {	margin-left: auto;		/* set within wrap in center */ 
